// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders the correct header 1`] = `
<div>
  <header
    class="site-header mb-3 py-3 border-bottom border-gray-300"
  >
    <div
      class="container"
    >
      <div
        class="row align-items-center"
      >
        <div
          class="col-auto justify-content-start"
        >
          <a
            class="pgn__hyperlink default-link standalone-link"
            target="_self"
          >
            <img
              alt="edX logo"
              height="30"
              src="https://edx-cdn.org/v3/default/logo.svg"
            />
          </a>
        </div>
        <div
          class="col-auto justify-content-start"
        >
          <a
            class="disabled-link text-gray-300"
            href="/"
          >
            Open Courses
          </a>
        </div>
        <div
          class="col-auto justify-content-start"
        >
          <a
            class=""
            href="/?course_type=executive-education-2u"
          >
            Executive Education
          </a>
        </div>
        <div
          class="col-auto justify-content-end"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Switch to 
            dark mode
          </button>
        </div>
        <div
          class="col-auto justify-content-end ml-auto"
        >
          <div
            class="pgn__dropdown pgn__dropdown-light dropdown"
            data-testid="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="btn-avatar pgn__avatar-button-avatar pgn__avatar-button-avatar-md dropdown-toggle btn btn-tertiary btn-md"
              type="button"
            >
              <img
                alt=""
                class="pgn__avatar pgn__avatar-sm"
                src="icon/mock/path"
              />
              test-username
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders the header correctly when toggling is allowed, and dark mode is on 1`] = `
<div>
  <header
    class="site-header mb-3 py-3 border-bottom border-gray-300"
  >
    <div
      class="container"
    >
      <div
        class="row align-items-center"
      >
        <div
          class="col-auto justify-content-start"
        >
          <a
            class="pgn__hyperlink default-link standalone-link"
            target="_self"
          >
            <img
              alt="edX logo"
              height="30"
              src="https://edx-cdn.org/v3/default/logo.svg"
            />
          </a>
        </div>
        <div
          class="col-auto justify-content-start"
        >
          <a
            class="disabled-link text-gray-300"
            href="/"
          >
            Open Courses
          </a>
        </div>
        <div
          class="col-auto justify-content-start"
        >
          <a
            class=""
            href="/?course_type=executive-education-2u"
          >
            Executive Education
          </a>
        </div>
        <div
          class="col-auto justify-content-end"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Switch to 
            light mode
          </button>
        </div>
        <div
          class="col-auto justify-content-end ml-auto"
        >
          <div
            class="pgn__dropdown pgn__dropdown-light dropdown"
            data-testid="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="btn-avatar pgn__avatar-button-avatar pgn__avatar-button-avatar-md dropdown-toggle btn btn-tertiary btn-md"
              type="button"
            >
              <img
                alt=""
                class="pgn__avatar pgn__avatar-sm"
                src="icon/mock/path"
              />
              test-username
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders the header correctly when users pass a querystring param to allow dark mode toggling 1`] = `
<div>
  <header
    class="site-header mb-3 py-3 border-bottom border-gray-300"
  >
    <div
      class="container"
    >
      <div
        class="row align-items-center"
      >
        <div
          class="col-auto justify-content-start"
        >
          <a
            class="pgn__hyperlink default-link standalone-link"
            target="_self"
          >
            <img
              alt="edX logo"
              height="30"
              src="https://edx-cdn.org/v3/default/logo.svg"
            />
          </a>
        </div>
        <div
          class="col-auto justify-content-start"
        >
          <a
            class="disabled-link text-gray-300"
            href="/"
          >
            Open Courses
          </a>
        </div>
        <div
          class="col-auto justify-content-start"
        >
          <a
            class=""
            href="/?course_type=executive-education-2u"
          >
            Executive Education
          </a>
        </div>
        <div
          class="col-auto justify-content-end"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Switch to 
            dark mode
          </button>
        </div>
        <div
          class="col-auto justify-content-end ml-auto"
        >
          <div
            class="pgn__dropdown pgn__dropdown-light dropdown"
            data-testid="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="btn-avatar pgn__avatar-button-avatar pgn__avatar-button-avatar-md dropdown-toggle btn btn-tertiary btn-md"
              type="button"
            >
              <img
                alt=""
                class="pgn__avatar pgn__avatar-sm"
                src="icon/mock/path"
              />
              test-username
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;
